<resources>
    <string name="app_name">My Application</string>

    <string name="item_id">ID: %1$d</string>
    <string name="icon_desc">Иконка элемента</string>
    <string name="name_hint">Название</string>
    <string name="pages_hint">Количество страниц</string>
    <string name="author_hint">Автор</string>
    <string name="disk_type_hint">Тип диска</string>
    <string name="issue_number_hint">Номер выпуска</string>
    <string name="month_hint">Месяц (напр. Январь)</string>
    <string name="available_hint_editable">Доступен (Да/Нет)</string>
    <string name="availability_status_hint">Статус доступности</string>
    <string name="save">Сохранить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="recyclerview_desc">Список элементов библиотеки</string>
    <string name="add_button_text">Добавить</string>
    <string name="retry_button_text">Повторить</string>
    <string name="empty_list_message">В библиотеке пока нет элементов</string>
    <string name="sort_date_desc">Дата ↓</string>
    <string name="sort_date_asc">Дата ↑</string>
    <string name="sort_name_asc">Имя А-Я</string>
    <string name="sort_name_desc">Имя Я-А</string>

    <string name="dialog_add_item_title">Выберите тип элемента</string>
    <string name="item_type_book">Книга</string>
    <string name="item_type_newspaper">Газета</string>
    <string name="item_type_disk">Диск</string>
    <string name="error_loading_details">Ошибка загрузки деталей</string>
    <string name="error_item_creation_failed">Ошибка: Не удалось создать элемент</string>
    <string name="error_unknown_item_type">Ошибка: Неизвестный тип элемента</string>

    <string name="error_validation_name_empty">Введите название</string>
    <string name="error_validation_available_format">Введите \'Да\' или \'Нет\'</string>
    <string name="error_validation_pages_invalid">Введите число страниц (> 0)</string>
    <string name="error_validation_author_empty">Введите автора</string>
    <string name="error_validation_issue_invalid">Введите номер выпуска (> 0)</string>
    <string name="error_validation_month_invalid">Неверный месяц (напр. \'Январь\')</string>
    <string name="error_validation_disktype_empty">Введите тип диска</string>
    <string name="error_validation_number_format">Ошибка ввода числовых данных</string>
    <string name="error_validation_generic">Произошла ошибка при проверке данных</string>

    <string name="error_loading_message">Ошибка загрузки: %1$s</string>
    <string name="unknown_error">Неизвестная ошибка</string>

    <string name="mode_local_library">Библиотека</string>
    <string name="mode_google_books">Google Books</string>
    <string name="google_search_author_hint">Автор (мин. 3 симв.)</string>
    <string name="google_search_title_hint">Название (мин. 3 симв.)</string>
    <string name="google_search_button">Поиск</string>
    <string name="google_search_error_min_chars">Введите минимум 3 символа для автора или названия</string>
    <string name="google_search_error_generic">Ошибка поиска книг: %1$s</string>
    <string name="google_save_no_isbn">Невозможно сохранить книгу без ISBN</string>
    <string name="google_save_already_exists">Книга \'%1$s\' уже есть в библиотеке.</string>
    <string name="google_save_prepare_error">Не удалось подготовить книгу к сохранению.</string>
    <string name="google_save_success">Книга \'%1$s\' сохранена.</string>
    <string name="google_save_error">Ошибка сохранения книги: %1$s</string>
    <string name="google_books_no_results">Книги по вашему запросу не найдены</string>

    <string name="details_fragment_title_default">Детали</string>
    <string name="error_loading_settings">Ошибка загрузки настроек</string>
    <string name="error_saving_settings">Ошибка сохранения настроек</string>
    <string name="item_added_success">Элемент \'%1$s\' добавлен.</string>
    <string name="item_deleted_success">Элемент \'%1$s\' удален.</string>
    <string name="item_delete_not_found">Не удалось удалить \'%1$s\'. Элемент не найден.</string>
    <string name="google_save_already_exists_detailed">Книга \'%1$s\' уже в библиотеке: %2$s</string>
    <string name="add_item_title_prefix">Добавить</string>
    <string name="view_item_title">Просмотр</string>

    <string name="error_database_operation_failed">Ошибка при работе с базой данных.</string>
    <string name="error_network_connection">Ошибка сетевого подключения. Проверьте интернет.</string>
    <string name="error_server_communication">Ошибка связи с сервером (код: %1$d).</string>
    <string name="error_io_general">Произошла ошибка ввода-вывода.</string>
    <string name="error_loading_data">Не удалось загрузить данные.</string>
    <string name="google_search_error_generic_vm">При поиске книг произошла ошибка.</string>
    <string name="google_save_error_generic_vm">Не удалось сохранить книгу.</string>

    <string name="error_loading_more_data">Ошибка при загрузке дополнительных данных.</string>
    <string name="error_adding_item">Не удалось добавить элемент.</string>
    <string name="error_deleting_item">Не удалось удалить элемент.</string>

</resources>