<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/icon_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_book"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iconImageView"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/pagesEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/pages_hint"
        android:inputType="number"
        android:autofillHints="none"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"/>

    <EditText
        android:id="@+id/authorEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/author_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/pagesEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"/>

    <EditText
        android:id="@+id/diskTypeEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/disk_type_hint"
        android:inputType="text"
        android:autofillHints="none"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/issueNumberEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/issue_number_hint"
        android:inputType="number"
        android:autofillHints="none"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/monthEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/month_hint"
        android:inputType="text"
        android:autofillHints="none"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/issueNumberEditText"
        app:layout_constraintStart_toStartOf="@id/issueNumberEditText"
        app:layout_constraintEnd_toEndOf="@id/issueNumberEditText"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/availableEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:inputType="text"
        android:autofillHints="available"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/availability_status_hint"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/authorEditText" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/availableEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>