<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/sortSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/sortSpinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shimmer_auto_start="false"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            android:importantForAccessibility="no">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <include layout="@layout/item_placeholder"/>
                <include layout="@layout/item_placeholder"/>
                <include layout="@layout/item_placeholder"/>
                <include layout="@layout/item_placeholder"/>
                <include layout="@layout/item_placeholder"/>
                <include layout="@layout/item_placeholder"/>
                <include layout="@layout/item_placeholder"/>
                <include layout="@layout/item_placeholder"/>
            </LinearLayout>
        </ScrollView>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/recyclerview_desc"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toBottomOf="@id/sortSpinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_library_item"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/emptyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/ic_item"
        android:drawablePadding="8dp"
        app:drawableTint="?android:attr/textColorSecondary"
        android:gravity="center_horizontal"
        android:text="@string/empty_list_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorSecondary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortSpinner"
        app:layout_constraintVertical_bias="0.4"
        tools:visibility="gone" />

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="gone"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortSpinner"
        app:layout_constraintBottom_toTopOf="@id/addButton">

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            tools:text="Произошла ошибка загрузки данных."/>

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_button_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>